# cutie-logs

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  cmake-variants.yaml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.woodpecker/: docker.yml
backend/: CMakeLists.txt  backend.cppm  main.cpp  network_ip_filter.cppm  pages.cpp  proto.cppm  self_sink.cppm  utils.cppm
backend/database/: consistency.cpp  database.cppm  generate_migrations.sh  migrations.cpp
backend/database/migrations/: 0000_init.sql  0001_attributes.sql  0002_resources.sql  0003_indicies.sql  0004_cleanup_rules.sql  0005_alert_rules.sql  0006_rule_action.sql  0007_partitioning.sql  0008_full_text_search.sql
backend/jobs/: cleanup.cpp  jobs.cppm
backend/notifications/: notifications.cppm  provider.cppm
backend/notifications/providers/: webhook.cpp
backend/opentelemetry/: server.cppm
backend/test/: CMakeLists.txt  notifications.cpp
backend/web/: api.cpp  server.cppm  static.cpp
common/: CMakeLists.txt  common.cppm  glaze.cppm  mmdb.cppm  stencil.cppm  stencil_functions.cppm  structs.cppm  utils.cppm
common/test/: CMakeLists.txt  glaze.cpp  mmdb.cpp  parse_ip.cpp  search_query.cpp  stencil.cpp
docs/: outgoing-ip-filter.md
frontend/: CMakeLists.txt  mainpage.cpp  web.cppm
frontend/po/: de.po  en.po  pl.po
frontend/public/: mainpage.html  style.css
frontend/src/: assets.cpp  assets.cppm  c++support.cpp  mainpage.cpp  translations.cpp  translations.cppm  utils.cppm  web.cppm
frontend/src/components/: _components.cppm  alert.cppm  dialog_add.cppm  dialog_delete.cppm  duration_picker.cppm  json_table.cppm  resource_modal.cppm  selection.cppm  theme_button.cppm  utils.cppm
frontend/src/pages/: _pages.cppm  logs.cppm  page.cppm  search.cppm  settings.cppm  table.cppm  utils.cppm
utils/: setup-cross-compile.sh
